--- a/form_registro.html
+++ b/form_registro.html
@@ -7,21 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="estilos/estilo_clien_sinlog.css">
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="estilos/estilos_registro.css">
-
+    <style>
+        .registrado-palabra{
+            color: white;
+        }
+    </style>
 </head>
 <body class="body-principal">
-    <header class="header">
-        <div class="Icono">
-            <a href="index.php">
-                <img src="imagenes/asd.png" alt="Logo de la página" class="logo">
-            </a>
+    <header>
+        <div class="nav-arriba">
+            <div class="Icono">
+                <a href="index.php">
+                    <img src="imagenes/asd.png" alt="Logo de la página" class="logo">
+                </a>
+            </div>
+            <div class="Iconos-sesion">
+                <a class="font-rickandmorty" href="form_iniciosesion.html">Registrarse/Log In</a>
+            </div>
         </div>
-        <nav id="menu_bar" class="">
-            
+        
+        <nav class="menu">
+            <ul>
+                <li><a href="index.php">Inicio</a></li>
+                <li><a href="catalogo_sinlog.php">Productos</a></li>
+                <li><a href="index.php#sobre-nosotros">Nosotros</a></li>
+                <li><a href="index.php#Formulario">Contacto</a></li>
+            </ul>
         </nav>
     </header>
     <div id="notification-container"></div>
@@ -58,6 +73,7 @@
             <div class="form-group">
                 <input type="submit" value="Registrarse">
             </div>
+                <p class="registrado-palabra">Si ya estás registrado, hacé clic acá para<a class="boton-registrarse" href="form_iniciosesion.html"> iniciar sesion</a></p>
         </form>
       </div>
     </main>
