Mantener header en todas las vistas

--- a/form_iniciosesion.html
+++ b/form_iniciosesion.html
@@ -27,7 +27,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="index.php">Inicio</a></li>
-                <li><a href="catalogo_sinlog.php">Productos</a></li>
+                <li><a href="catalogo_sinlog.php">Catalogo</a></li>
                 <li><a href="index.php#sobre-nosotros">Nosotros</a></li>
                 <li><a href="index.php#Formulario">Contacto</a></li>
             </ul>
