--- a/form_iniciosesion.html
+++ b/form_iniciosesion.html
@@ -8,8 +8,7 @@
     <title>Mi Página</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="estilos/estilos_iniciarsesion.css">
-    <link rel="stylesheet" type="text/css" href="estilos/estilo_clien_sinlog.css">
+    <link rel="stylesheet" type="text/css" href="estilos/estilo_iniciarsesion.css">
 </head>
 <body class="body-principal">
     <header>
@@ -54,9 +53,8 @@
         </form>
       </div>
     </main>
-    <footer class="footer-modern">
-
-    <div class="footer-bottom">
+    <footer class="footer">
+    <div >
         <p>&copy; UTN FRH – Todos los derechos reservados - 2024</p>
     </div>
 </footer>
