--- a/form_registro.html
+++ b/form_registro.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Página</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="estilos/estilo_clien_sinlog.css">
    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="estilos/estilos_registro.css">
+    <link rel="stylesheet" type="text/css" href="estilos/estilo_registro.css">
     <style>
         .registrado-palabra{
             color: white;
@@ -77,8 +76,10 @@
         </form>
       </div>
     </main>
-    <footer class="footer">
-        <p>&copy; 2024 Mi Página. Todos los derechos reservados.</p>
+   <footer class="footer">
+        <div >
+            <p>&copy; UTN FRH – Todos los derechos reservados - 2024</p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
