--- a/form_iniciosesion.html
+++ b/form_iniciosesion.html
@@ -12,26 +12,26 @@
 </head>
 <body class="body-principal">
     <header>
-        <div class="nav-arriba">
-            <div class="Icono">
-                <a href="index.php">
-                    <img src="imagenes/asd.png" alt="Logo de la página" class="logo">
-                </a>
+            <div class="nav-arriba">
+                <div class="Icono">
+                    <a href="index.php">
+                        <img src="imagenes/asd.png" alt="Logo de la página" class="logo">
+                    </a>
+                </div>
+                <div class="Iconos-sesion">
+                    <a href="form_iniciosesion.html">Registrarse/Log In</a>
+                </div>
             </div>
-            <div class="Iconos-sesion">
-                <a class="font-rickandmorty" href="form_iniciosesion.html">Registrarse/Log In</a>
-            </div>
-        </div>
-        
-        <nav class="menu">
-            <ul>
-                <li><a href="index.php">Inicio</a></li>
-                <li><a href="catalogo_sinlog.php">Catalogo</a></li>
-                <li><a href="index.php#sobre-nosotros">Nosotros</a></li>
-                <li><a href="index.php#Formulario">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+            
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.php">Inicio</a></li>
+                    <li><a href="catalogo_sinlog.php">Catalogo</a></li>
+                    <li><a href="index.php#sobre-nosotros">Nosotros</a></li>
+                    <li><a href="index.php#Formulario">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
     <div id="notification-container"></div>
     <main class="main-content">
       <div class="form-is">
