actualizacion adv y accesos

--- a/form_registro.html
+++ b/form_registro.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="estilos/estilo_registro.css">
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@900&family=Righteous&family=Seymour+One&display=swap');
+    </style>
+    <style>
         .registrado-palabra{
             color: white;
         }
